<resources>
    <string name="app_name">VacunasPass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_pantall_principal">PantallPrincipal</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="recordar_cuenta">Recordar cuenta</string>
    <string name="recuperar_cuneta">Recuperar cuneta</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="correo_electronico">Correo electronico*</string>
    <string name="contrase_a">Contraseña *</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="drawe_open">Open Drawe</string>
    <string name="drawe_close">Close Drawe</string>
    <!-- Textos de main Menu -->
    <string name="activityActual">a</string>
    <string name="nombreUsuario">Nombre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>